horizontal scrollbar height fix

--- a/src/styles/scrollbars.scss
+++ b/src/styles/scrollbars.scss
@@ -1,6 +1,7 @@
 /* width */
 ::-webkit-scrollbar {
     width: 8px;
+    height: 6px;
 }
 
 /* Track */
